# memwar

./: CMakeLists.txt  LICENSE  README.md  sources.cmake
CMakeModules/: FindKobold.cmake  FindOGRE.cmake
android/: AndroidManifest.xml  ant.properties  build.sh  build.xml  local.properties
android/jni/: Android.mk  Application.mk
android/src/: MemWar.java  glue.cpp
data/fonts/: fonts.fontdef
data/levels/: worlds.mwr
data/levels/world1/: level1.lvl  level10.lvl  level11.lvl  level12.lvl  level2.lvl  level3.lvl  level4.lvl  level5.lvl  level6.lvl  level7.lvl  level8.lvl  level9.lvl  world1.mwr
data/levels/world2/: level1.lvl  level10.lvl  level11.lvl  level12.lvl  level13.lvl  level14.lvl  level2.lvl  level3.lvl  level4.lvl  level5.lvl  level6.lvl  level7.lvl  level8.lvl  level9.lvl  world2.mwr
data/levels/world3/: level1.lvl  level10.lvl  level11.lvl  level12.lvl  level13.lvl  level14.lvl  level15.lvl  level16.lvl  level17.lvl  level18.lvl  level2.lvl  level3.lvl  level4.lvl  level5.lvl  level6.lvl  level7.lvl  level8.lvl  level9.lvl  world3.mwr
data/materials/: alien.material  block.material  block1.material  block10.material  block11.material  block12.material  block13.material  block14.material  block15.material  block16.material  block17.material  block18.material  block19.material  block2.material  block20.material  block3.material  block4.material  block5.material  block6.material  block7.material  block8.material  block9.material  block_Texture.xcf  block_alien.material  block_alien1.material  block_alien2.material  block_alien3.material  block_alien4.material  block_alien5.material  block_alien_texture.xcf  bomb.material  compass.material  punk.material  thief.material  zosima.material
data/models/: field.material
data/models/aliendisk/: aliendisk.blend  aliendisk.blend1  aliendisk_Cylinder.tga
data/models/block/: block.blend  block.mesh  block2.blend  block_alien.blend  (+1 more)
data/music/: license.txt
src/: config.h.in
src/challenge/: alien.cpp  alien.h  bomb.cpp  bomb.h  challenge.cpp  challenge.h  challengeinfo.cpp  challengeinfo.h  chrono.cpp  chrono.h  compass.cpp  compass.h  punk.cpp  punk.h  thief.cpp  thief.h
src/game/: initial.cpp  initial.h  level.cpp  level.h  mblock.cpp  mblock.h  memwar.cpp  memwar.h  options.cpp  options.h  pair.cpp  pair.h  pause.cpp  pause.h  score.cpp  score.h  selector.cpp  selector.h  world.cpp  world.h  worldselector.cpp  worldselector.h
src/special/: ocarina.cpp  ocarina.h  quantum.cpp  quantum.h  selector.cpp  selector.h  special.cpp  special.h  wind.cpp  wind.h
(+12 files in other folders)
